[package]
name = "bevy_mod_ui_texture_atlas_image"
version = "0.1.8"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "texture", "atlas", "ui", "games"]
categories = ["game-development", "graphics", "gui"]
repository = "https://github.com/ickshonpe/bevy_mod_ui_texture_atlas_image"
readme = "README.md"
description = "Draw images from texture atlases the with Bevy UI"

[dependencies.bevy]
version = "0.8"
default_features= false
features = ["bevy_asset", "render"]

[dev-dependencies]
bevy = "0.8"